Moved the new URL call to new URI (Deprecation)